--- a/IBM_FSD/src/Project/Project_Skill_Tracker_19_09_19/.project
+++ b/IBM_FSD/src/Project/Project_Skill_Tracker_19_09_19/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Project_Skill_Tracker</name>
+	<name>Project_Skill_Tracker_Employee_19_09_19</name>
 	<comment></comment>
 	<projects>
 	</projects>
